<resources>
    <string name="app_name">whatToDo</string>
    <string name="title_activity_login">Login</string>
    <string name="login_or_sign_up_text">Login with an existing account or sign up!</string>
    <string name="login">Login</string>
    <string name="email_address">Email address</string>
    <string name="hint_email_address">Email address...</string>
    <string name="password">Password</string>
    <string name="hint_password">Password...</string>
    <string name="action_login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_you_have_an_account">Don\'t you have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="password_too_short">Password is too short!</string>
    <string name="invalid_email_address">Invalid email address!</string>
    <string name="password_again">Password again</string>
    <string name="confirm_password">Confirm password</string>
    <string name="hint_confirm_password">Confirm password...</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="title_activity_create_todo">Create new Todo</string>
    <string name="title_activity_todo">Your own Todos</string>
    <string name="todo_name">TODO name</string>
    <string name="name_of_your_todo">Name of your TODO</string>
    <string name="todo_description">TODO description</string>
    <string name="todo_short_description">TODO short description</string>
    <string name="todo_category">TODO category</string>
    <string name="todo_priority">TODO priority</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="required_field">Required field!</string>
    <string name="todo_location">TODO location</string>
    <string name="todo_deadline">TODO deadline</string>
    <string name="deadline_hint">2017-07-31 : 12:30</string>
    <string name="edit">Edit</string>
    <string name="edit_todo_title">Edit TODO</string>
    <string name="todo_created">TODO created!</string>
    <string name="todo_edited">TODO edited!</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_delete">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invalid_type">Invalid type</string>

    <string name="unknown_geofence_error">"Unknown geofence error"</string>
    <string name="geofence_not_enable">"Geofence not enable"</string>
    <string name="geofence_too_many_geofences">"Too many geofences"</string>
    <string name="geofence_too_many_pending_intents">"Too many pending intents"</string>
    <string name="geofence_transition_notification_text">"Notification"</string>
    <string name="geofence_transition_entered">"Entered"</string>
    <string name="geofence_transition_exited">"Exited"</string>
    <string name="unknown_geofence_transition">"Unknown"</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="location_permission">Location permission</string>
    <string name="settings">Settings</string>
    <string name="there_is_a_todo_for_you">There is a todo for you!</string>
    <string name="deadline_approaching">Deadline approaching!</string>
    <string name="login_activity_title">Login</string>

    <string-array name="todo_category_spinner_array">
        <item name="work">Work</item>
        <item name="home">Home</item>
        <item name="school">School</item>
        <item name="entertainment">Entertainment</item>
        <item name="other">Other</item>
    </string-array>

    <string-array name="todo_priority_spinner_array">
        <item name="high">High</item>
        <item name="low">Low</item>
        <item name="medium">Medium</item>
    </string-array>

</resources>
