<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hu.webandmore.todo.ui.login.LoginActivity">

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/login"
                android:textColor="@color/primaryText"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login_or_sign_up_text"
                android:textColor="@color/secondaryText"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/email_address"
                android:textColor="@color/primaryText"
                android:textSize="14sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/secondaryText"
                app:errorEnabled="false"
                android:elevation="2dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hint_email_address"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/secondaryText"
                    android:textSize="16sp"
                    />

                <requestFocus />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textColor="@color/primaryText"
                android:textSize="14sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/secondaryText"
                app:errorEnabled="false"
                app:passwordToggleContentDescription="@string/hint_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent"
                android:elevation="2dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hint_password"
                    android:imeActionLabel="@string/action_login"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword|textNoSuggestions"
                    android:maxLines="1"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="70dp">

                <Button
                    android:id="@+id/login"
                    android:layout_width="230dp"
                    android:layout_height="55dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button_rounded_blue"
                    android:elevation="10dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_you_have_an_account"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/signUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
